# general_ai

./: .gitignore  README.md  publish.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
docs/: readme.md
docs/google_generative_ai/: readme.md
native_lib/: CMakeLists.txt  readme.md
package/general_ai/: CHANGELOG.md  pubspec.yaml
package/general_ai/example/: general_ai_example.dart
package/general_ai/lib/: general_ai.dart  general_ai_core.dart
package/general_ai/test/: general_ai_test.dart
package/general_ai_android/: pubspec.yaml
package/general_ai_android/lib/: general_ai_android.dart
package/general_ai_android/test/: general_ai_android_test.dart
package/general_ai_apis/: pubspec.yaml
package/general_ai_apis/example/: general_ai_apis_example.dart
package/general_ai_apis/lib/: general_ai_apis.dart
package/general_ai_apis/test/: general_ai_apis_test.dart
package/general_ai_cli/: pubspec.yaml
package/general_ai_cli/example/: general_ai_cli_example.dart
package/general_ai_cli/lib/: general_ai_cli.dart
package/general_ai_cli/test/: general_ai_cli_test.dart
package/general_ai_client/: pubspec.yaml
package/general_ai_client/example/: general_ai_client_example.dart
package/general_ai_client/lib/: general_ai_client.dart
package/general_ai_client/test/: general_ai_client_test.dart
package/general_ai_dart/: pubspec.yaml  pubspec_overrides.yaml
package/general_ai_dart/example/: general_ai_dart_example.dart
package/general_ai_flutter/: README.md  pubspec.yaml  pubspec_overrides.yaml
package/general_ai_fucshia/: pubspec.yaml
package/general_ai_ios/: pubspec.yaml
package/general_ai_linux/: pubspec.yaml
package/general_ai_macos/: pubspec.yaml
package/general_ai_server/: pubspec.yaml
package/general_ai_web/: pubspec.yaml
package/general_ai_windows/: pubspec.yaml
test/: general_ai_test.dart
(+34 files in other folders)
